# DESAFIO1_2026-1

./: INFORME DESAFIO I (1).docx  INFORME FINAL DESAFIO I.docx  Informe de responsabilidades Desafíos1-2026-1.docx  README.md  main.cpp
DESAFIO_1git_hub/: CMakeLists.txt  funciones.cpp  funciones.h  main.cpp  video
